<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>net.yangeorget.jelly</groupId>
   <artifactId>jelly</artifactId>
   <packaging>jar</packaging>
   <name>jelly</name>
   <version>0.1</version>
   <properties>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
      <java.version>1.7</java.version>
      <aspectj.version>1.7.1</aspectj.version>
      <aspectj.maven.version>1.4-criteo</aspectj.maven.version>
      <guava.version>14.0.1</guava.version>
      <log4j.version>1.2.17</log4j.version>
      <maven.javadoc.version>2.8.1</maven.javadoc.version>
      <maven.source.version>2.1.2</maven.source.version>
      <maven.surefire.version>2.15</maven.surefire.version>
      <maven.compiler.version>2.5.1</maven.compiler.version>
      <maven.jar.version>2.2</maven.jar.version>
      <slf4j.version>1.7.2</slf4j.version>
      <testng.version>6.8</testng.version>
   </properties>
   <dependencies>
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
       <version>${guava.version}</version>
     </dependency>
     <dependency>
         <groupId>org.aspectj</groupId>
         <artifactId>aspectjtools</artifactId>
         <version>${aspectj.version}</version>
      </dependency>
      <dependency>
         <groupId>org.aspectj</groupId>
         <artifactId>aspectjrt</artifactId>
         <version>${aspectj.version}</version>
      </dependency>
      <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
         <version>${slf4j.version}</version>
      </dependency>
      <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-log4j12</artifactId>
         <version>${slf4j.version}</version>
      </dependency>
      <dependency>
         <groupId>log4j</groupId>
         <artifactId>log4j</artifactId>
         <version>${log4j.version}</version>
      </dependency>
      <dependency>
         <groupId>org.testng</groupId>
         <artifactId>testng</artifactId>
         <version>${testng.version}</version>
      </dependency>
   </dependencies>
   <build>
      <plugins>
	<plugin>
	  <groupId>org.apache.maven.plugins</groupId>
	  <artifactId>maven-eclipse-plugin</artifactId>
	  <version>2.9</version>
	  <configuration>
	    <downloadSources>true</downloadSources>
	    <downloadJavadocs>true</downloadJavadocs>
	  </configuration>
	</plugin>
<!--
         <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>aspectj-maven-plugin</artifactId>
            <version>${aspectj.maven.version}</version>
            <configuration>
               <source>${java.version}</source>
               <target>${java.version}</target>
               <Xlint>ignore</Xlint>
               <complianceLevel>${java.version}</complianceLevel>
               <encoding>UTF-8</encoding>
            </configuration>
            <executions>
               <execution>
                  <goals>
                     <goal>compile</goal>
                     <goal>test-compile</goal>
                  </goals>
               </execution>
            </executions>
         </plugin>
-->
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>${maven.compiler.version}</version>
            <configuration>
               <source>${java.version}</source>
               <target>${java.version}</target>
            </configuration>
         </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>${maven.surefire.version}</version>
	    <configuration>
	      <argLine>-Xmx1800m -XX:+UseConcMarkSweepGC</argLine>
	    </configuration>
         </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
            <version>${maven.source.version}</version>
            <executions>
               <execution>
                  <id>attach-sources</id>
                  <goals>
                     <goal>jar</goal>
                     <goal>test-jar</goal>
                  </goals>
               </execution>
            </executions>
         </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-jar-plugin</artifactId>
            <version>${maven.jar.version}</version>
            <executions>
               <execution>
                  <goals>
                     <goal>jar</goal>
                     <goal>test-jar</goal>
                  </goals>
               </execution>
            </executions>
         </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <version>${maven.javadoc.version}</version>
            <configuration>
               <charset>UTF-8</charset>
               <docencoding>UTF-8</docencoding>
               <show>protected</show>
            </configuration>
            <executions>
               <execution>
                  <id>attach-javadocs</id>
                  <goals>
                     <goal>jar</goal>
                     <goal>test-jar</goal>
                  </goals>
               </execution>
            </executions>
         </plugin>
      </plugins>
   </build>
   <reporting>
      <plugins>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-report-plugin</artifactId>
            <version>${maven.surefire.version}</version>
         </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-checkstyle-plugin</artifactId>
          <version>${maven.checkstyle.plugin}</version>
	  <configuration>
            <configLocation>checkstyle.xml</configLocation>
          </configuration>
        </plugin>
      </plugins>
  </reporting>
</project>
